...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/add_new_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add new contact"
        android:layout_alignParentBottom="true"/>

    <ListView
        android:id="@+id/contact_list_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"/>

</RelativeLayout>

